CSS fixes (spacing)
affects footer, pages with front images, views fields

--- a/theme/css/breaks/fachbereich-mobile.css
+++ b/theme/css/breaks/fachbereich-mobile.css
@@ -28,17 +28,8 @@
     margin-top: 0;
 }
 
-.aside-container > div:first-child {
-    margin-top: calc(15vw + 5em);
-}
-
 @media all and (max-width: 500px) {
-    .aside-container > div:first-child {
-        margin-top: calc(22vw + 5em);
-    }
-
     .stufen {
         max-width: unset;
     }
-
 }
