--- a/theme/css/views.css
+++ b/theme/css/views.css
@@ -121,17 +121,19 @@
     width: 100%;
     font-size: 1.15em;
     margin-top: 1em;
+    margin-bottom: 1em;
 }
-
 
 .views-table .views-field-title {
     display: table-cell;
     width: unset;
     font-size: 1em;
+    margin-bottom: 0;
 }
 
 .views-field-view-node {
     display: inline-block;
+    margin-top: 0.2em;
 }
 
 .views-field-view-node a {
@@ -151,6 +153,11 @@
 .views-field-body p {
     margin-bottom: 0.2em;
 }
+
+.views-field-body p:first-child {
+    margin-top: 0;
+}
+
 .views-field-view-node:after {
     content: "";
     clear: both;
